fix layout bug

--- a/lms/static/sass/_gymnasium.scss
+++ b/lms/static/sass/_gymnasium.scss
@@ -257,8 +257,7 @@ div#content.content-wrapper,
 {
   max-width: none;
   margin:auto;
-  padding-top:0;
-  padding-bottom:0;
+  padding:0;
 }
 
 .home>header
